# BW-simulation

./: CMakeLists.txt  README.md  package.xml
include/: coordinate_converter.h  sim_main_node.h  sim_main_node_map_navigation.h
launch/: bw_sim.launch
models/ground_plane_map/: model.config  model.sdf
models/ground_plane_map/materials/scripts/: Sarone.material
src/: coordinate_converter.cpp  sim_main_node.cpp
worlds/: bw_sim_world.world
