<?xml version="1.0"?>
<package format="2">
  <name>bw_simulation</name>
  <version>0.0.1</version>
  <description>The bw simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="barakr3@gmail.com">Barak</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/bw_simulation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>turtlebot3</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>turtlebot3_simulations</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>turtlebot3_simulations</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- Gazebo-specific information -->

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>

    <!-- Set GAZEBO_MODEL_PATH environment variable with a relative path -->
    <environment_variable name="GAZEBO_MODEL_PATH" value="${CATKIN_DEVEL_PREFIX}/../src/bw_simulation/models"/>
  </export>
</package>
